# llvm-rust-repro

./: README.md
cargo/private/: cargo_build_script.bzl
examples/all_crate_deps/: BUILD.bazel  Cargo.toml  MODULE.bazel
examples/all_crate_deps/src/: main.rs
examples/compile_opt/: MODULE.bazel
examples/compile_opt/hello_comp_opt/: BUILD.bazel
examples/compile_opt/hello_comp_opt/src/: main.rs
examples/crate_universe/: MODULE.bazel
examples/override_target/: MODULE.bazel
extensions/bindgen/private/: bindgen.bzl
rust/: toolchain.bzl
rust/platform/: triple_mappings.bzl
rust/private/: rust.bzl  rustc.bzl  rustdoc_test.bzl  utils.bzl
rust/private/dummy_cc_toolchain/: dummy_cc_toolchain.bzl
