load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

rust_binary(
    name = "bin",
    srcs = ["src/main.rs"],
    rustc_flags = select({
        "//:release": [
            "-Ccodegen-units=1",
            "-Cpanic=abort",
            "-Copt-level=3",
            "-Cstrip=symbols",
        ],
        "//conditions:default": [
            "-Copt-level=0",
        ],
    }),
    visibility = ["//visibility:public"],
    deps = [],
)

rust_library(
    name = "lib",
    srcs = ["src/main.rs"],
    rustc_flags = select({
        "//:release": [
            "-Ccodegen-units=1",
            "-Cpanic=abort",
            "-Copt-level=3",
            "-Cstrip=symbols",
        ],
        "//conditions:default": [
            "-Copt-level=0",
        ],
    }),
    visibility = ["//visibility:public"],
    deps = [],
)

rust_test(
    name = "lane_graph_construction_test",
    crate = "lane_graph_construction",
    data = [
        "//waabi/map/annotation:mappa_unit_tests",
        "//waabi/proto/onboard:lane_graph_rs_proto",
    ],
    deps = [
        "//waabi/map/traffic_lights",
        "//waabi/proto/onboard:traffic_lights_rs_proto",
        cargo_crate("tempdir"),
        cargo_crate("rmp-serde"),
    ],
)
